# the-block

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  AMOUNT_IT_INVENTORY.md  API_CHANGELOG.md  AUDIT_NOTES.md  Agent-Next-Instructions.md  Agents-Sup.md  CHANGELOG.md  CHANGES_APPLIED.txt  CHAOS_TEST_FIXES.md  CIRCUIT_BREAKER_TELEMETRY_COMPLETE.md  CLA.md  CODE_CHANGES_REFERENCE.md  COMPILATION_FIXES_FINAL.md  COMPREHENSIVE_COMPLETION_SUMMARY.md  CONSENSUS.md  CONTRIBUTING.md  Cargo.toml  DELIVERY_MANIFEST.md  DEPLOYMENT_CHECKLIST.md  DOCS_UPDATE.md  Dockerfile  ECONOMICS.md  ECONOMIC_SYSTEM_CHANGELOG.md  EXPLAIN.md  FINAL_STATUS.md  FIX_SUMMARY.txt  FORMULA_OPTIMIZATION_PLAN.md  FOUNDER_TO_FOUNDER_AUDIT.md  GENESIS_HISTORY.md  Justfile  LICENSE  MAINNET_READINESS_CHECKLIST.md  Makefile  NEXT_DEV_THREE_BIG_STRIDES.md  NEXT_STEPS_EXACTLY.md  OPTIMIZATION_PROGRESS.md  OPTIMIZATION_SUMMARY.md  PARTITION_TEST_FIX_1PCT.md  (+48 more)
blocktorch/: .gitignore  AGENTS.md  CMakeLists.txt  README.md  bootstrap_codex.sh  openapi.json
blocktorch/benchmarks/: README.md  orchard_bench.cpp  run.py
blocktorch/docs/: README.md  project_status.md
blocktorch/experimental/: README.md  check_orchard.sh  kernels_inventory.md  orchard_test_1753726902.txt  setup.py
blocktorch/metal-tensor/: AGENTS.md  CMakeLists.txt  README.md  runtime_version.txt
blocktorch/scripts/: generate-openapi.js
bridges/: Cargo.toml
bridges/src/: codec.rs  header.rs  lib.rs  light_client.rs  lock.rs  relayer.rs  token_bridge.rs  unlock.rs
bridges/tests/: adversarial.rs  header_persistence.rs  htlc.rs  relayer_incentives.rs  token_bridge_supply.rs  verified_deposit.rs
cli/: Cargo.toml  README.md  build.rs
cli/benches/: fee_estimator.rs
cli/src/: ad_market.rs  ai.rs  blocktorch_timeline.rs  bridge.rs  codec_helpers.rs  compute.rs  config.rs  debug_cli.rs  dex.rs  difficulty.rs  energy.rs  explorer.rs  fee_estimator.rs  gateway.rs  gov.rs  governor.rs  htlc.rs  http_client.rs  identity.rs  inhouse.rs  json_helpers.rs  lib.rs  light_client.rs  light_sync.rs  logs.rs  main.rs  net.rs  parse_utils.rs  remediation.rs  rpc.rs  scheduler.rs  service_badge.rs  snark.rs  storage.rs  system.rs  telemetry.rs  tls.rs  tx.rs  version.rs  wallet.rs  (+1 more)
cli/tests/: bridge.rs  compute.rs  did.rs  explorer.rs  fee_floor_warning.rs  storage_importer.rs  treasury.rs  wallet_signer_metadata.rs
crates/ad_market/: Cargo.toml
crates/bridge-types/: Cargo.toml
crates/cli_core/: Cargo.toml
crates/codec/: Cargo.toml
crates/coding/: Cargo.toml
crates/crypto_suite/: Cargo.toml
crates/energy-market/: Cargo.toml
crates/foundation_rpc/: Cargo.toml
crates/foundation_serde/: Cargo.toml
crates/foundation_serde_derive/: Cargo.toml
crates/foundation_serialization/: Cargo.toml
crypto/: Cargo.toml
crypto/benches/: dilithium.rs
crypto/src/: dilithium.rs  lib.rs  primitives.rs  session.rs
crypto/tests/: domain.rs
dex/: Cargo.toml
dex/examples/: escrow.rs
dex/src/: amm.rs  cfmm.rs  escrow.rs  htlc_router.rs  lib.rs  liquidity_reward.rs  router.rs
dex/tests/: amm.rs  escrow.rs
explorer/: Cargo.toml  Dockerfile
explorer/api_schema/: release_history.json
explorer/src/: ad_view.rs  ai_summary.rs  bridge_view.rs  compute_view.rs  dex_view.rs  did_view.rs  dkg_view.rs  gov_param_view.rs  htlc_view.rs  jurisdiction_view.rs  lib.rs  light_client.rs  main.rs  net_view.rs  release_view.rs  snark_view.rs  storage_view.rs
explorer/tests/: ad_policy_and_readiness.rs  block_api.rs  compute_settlement.rs  dex_api.rs  did_api.rs  explorer_bind.rs  http_router.rs  indexing.rs  release_api.rs  treasury_api.rs  vm_trace.rs  wasm_view.rs
fuzz/: Cargo.toml
fuzz/.cargo/: config.toml
fuzz/compute_market/: mod.rs
fuzz/compute_receipt/: mod.rs
fuzz/consensus/: mod.rs
fuzz/coverage/: coverage.profdata
fuzz/energy/: mod.rs
fuzz/energy_receipt/: mod.rs
fuzz/fuzz_targets/: compute_market.rs  compute_receipt.rs  consensus.rs  energy.rs  energy_receipt.rs  gateway_doh.rs  localnet_proximity.rs  network.rs  quic_frame.rs  range_boost_parse.rs  receipts.rs  rpc.rs  treasury.rs  wal_fuzz.rs
fuzz/gateway_doh/: mod.rs
fuzz/localnet_proximity/: README.md
fuzz/network/: mod.rs  repro.sh
fuzz/receipts/: mod.rs
fuzz/rpc/: mod.rs  repro.sh
fuzz/tests/: compute_market_smoke.rs  rpc_smoke.rs
fuzz/treasury/: mod.rs
governance/: Cargo.toml  FORK-FEE-01.json
governance/examples/: usage.rs
governance/feature_flags/: FORK-FEE-01.json
governance/src/: access_control.rs  authorization.rs  bicameral.rs  circuit_breaker.rs  circuit_breaker_integration_test.rs  codec.rs  controller.rs  disbursement_auth.rs  energy_params.rs  lib.rs  params.rs  proposals.rs  release.rs  reward.rs  state.rs  store.rs  store_auth_helpers.rs  treasury.rs  treasury_deps.rs  variance.rs
governance/tests/: mempool_params.rs  params_value.rs  proposals.rs  store.rs  treasury.rs
ledger/: Cargo.toml
ledger/src/: address.rs  crypto.rs  lib.rs  shard.rs  token.rs  utxo_account.rs
ledger/tests/: utxo_account.rs  utxo_migration.rs
metrics-aggregator/: Cargo.toml  telemetry.yaml
metrics-aggregator/preserve-escalate/: 1765717772_11_bridge_node_bridge_settlement_results_total_escalate.json  1765717772_12_bridge_node_bridge_settlement_results_total_escalate.json
monitoring/: Cargo.toml  Makefile  README.md  alert.rules.yml  alert.test.yml  alert_rules.yml  alertmanager.yml  build.rs  docker-compose.yml  grafana_energy_dashboard.json  grafana_receipt_dashboard.json  grafana_treasury_dashboard.json  metrics.json  package-lock.json  package.json  prometheus.yml  prometheus_recording_rules.yml
node/: .env.example  Cargo.toml  build.rs
sim/: Cargo.toml  bridge_threats.rs  chaos_lab.rs  dex_liquidity.rs  did.rs  dkg_latency.rs  fee_spike.rs  htlc_scenarios.rs  lagging_release.rs  log_correlation.rs  mempool_spam.rs  mobile_burst.rs  proof_relay.rs  quic_chaos_summary.rs  release_signers.rs  restore_portability.rs  scheduler_mixed.rs  snark_overhead.rs
sled/: Cargo.toml
state/: Cargo.toml  README.md
storage/: Cargo.toml
storage_market/: Cargo.toml
(+2066 files in other folders)
