[workspace]
members = [
    "crates/diagnostics",
    "crates/concurrency",
    "crates/base64_fp",
    "crates/histogram_fp",
  "crypto",
  "node",
  "state",
  "ledger",
  "crates/probe",
  "crates/runtime",
  "crates/wallet",
  "crates/transport",
  "crates/light-client",
  "crates/jurisdiction",
  "crates/p2p_overlay",
  "crates/storage_engine",
  "crates/coding",
  "crates/testkit_macros",
  "fuzz",
  "sim",
  "tools/xtask",
  "tools/indexer",
  "tools/bench-harness",
  "tools/installer",
  "tools/debugger",
  "tools/analytics_audit",
  "tools/auto-profile",
  "tools/gov_graph",
  "tools/dual-key-migrate",
  "tools/remote-signer",
  "tools/provenance_verify",
  "tools/release_notes",
  "tools/ai_diag",
  "tools/log_indexer_cli",
  "tools/storage_migrate",
  "tools/release_tests",
  "explorer",
  "bridges",
  "cli",
  "sled",
  "net/fuzz",
  "gateway/fuzz",
  "dex",
  "inflation",
  "metrics-aggregator",
  "storage",
  "privacy",
  "dkg",
  "governance",
  "tools/dependency_registry",
  "crates/codec",
  "crates/crypto_suite",
  "crates/httpd",
  "crates/testkit",
  "crates/cli_core",
  "crates/foundation_serialization",
  "crates/foundation_rpc",
  "crates/foundation_math",
  "crates/foundation_telemetry",
  "crates/foundation_lazy",
  "crates/dependency_guard",
  "crates/python_bridge",
  "crates/sys",
]
default-members = [
  "node",
"state",
  "crates/probe",
  "tools/xtask"
]
resolver = "2"

[profile.test]
# Reduce debug info emitted for test builds so the GNU linker stays within the
# memory budget on constrained CI runners.  Local developers can raise this
# level again via a `.cargo/config.toml` override whenever deeper symbolisation
# is required.
debug = 1

