[workspace]
members = [
    "crates/diagnostics",
    "crates/concurrency",
    "crates/base64_fp",
    "crates/histogram_fp",
  "crypto",
  "node",
  "state",
  "ledger",
  "crates/probe",
  "crates/runtime",
  "crates/wallet",
  "crates/transport",
  "crates/light-client",
  "crates/jurisdiction",
  "crates/p2p_overlay",
  "crates/storage_engine",
  "crates/coding",
  "crates/testkit_macros",
  "fuzz",
  "sim",
  "tools/xtask",
  "tools/indexer",
  "tools/bench-harness",
  "tools/installer",
  "tools/debugger",
  # "tools/analytics_audit",  # Excluded: serde derive macro incompatibility with foundation_serde
  "tools/auto-profile",
  "tools/gov_graph",
  "tools/dual-key-migrate",
  "tools/remote-signer",
  "tools/provenance_verify",
  "tools/release_notes",
  "tools/ai_diag",
  "tools/legacy_manifest",
  "tools/log_indexer_cli",
  "tools/storage_migrate",
  # "tools/tls_manifest_guard",  # Excluded: serde derive macro incompatibility with foundation_serde
  "tools/release_tests",
  "services/mock-energy-oracle",
  "explorer",
  "bridges",
  "crates/bridge-types",
  "crates/ad_market",
  "crates/energy-market",
  "crates/oracle-adapter",
  "cli",
  "sled",
  "net/fuzz",
  "gateway/fuzz",
  "dex",
  "inflation",
  "metrics-aggregator",
  "storage",
  "storage_market",
  "privacy",
  "dkg",
  "governance",
  "tools/dependency_registry",
  "crates/codec",
  "crates/crypto_suite",
  "crates/verifier_selection",
  "crates/pqcrypto_dilithium",
  "crates/pqcrypto_kyber",
  "crates/httpd",
  "crates/testkit",
  "crates/cli_core",
  "crates/log_index",
  "crates/foundation_async",
  "crates/foundation_archive",
  "crates/foundation_serialization",
  "crates/foundation_bigint",
  "crates/foundation_regex",
  "crates/foundation_rpc",
  "crates/foundation_serde",
  "crates/foundation_serde_derive",
  "crates/foundation_math",
  "crates/foundation_telemetry",
  "crates/foundation_profiler",
  "crates/foundation_metrics",
  "crates/foundation_object_store",
  "crates/foundation_qrcode",
  "crates/foundation_fuzz",
  "crates/foundation_sqlite",
  "crates/foundation_time",
  "crates/foundation_tls",
  "crates/foundation_unicode",
  "crates/foundation_windows",
  "crates/foundation_tui",
  "crates/foundation_lazy",
  "crates/thiserror",
  "crates/dependency_guard",
  "crates/python_bridge",
  "crates/python_bridge_macros",
  "crates/sys",
  "crates/http_env",
  "crates/tls_warning",
  "crates/zkp",
]
default-members = [
  "node",
"state",
  "crates/probe",
  "tools/xtask"
]
resolver = "2"

[workspace.dependencies]
serde = { package = "foundation_serde", path = "crates/foundation_serde", default-features = false }

[profile.test]
# Reduce debug info emitted for test builds so the GNU linker stays within the
# memory budget on constrained CI runners.  Local developers can raise this
# level again via a `.cargo/config.toml` override whenever deeper symbolisation
# is required.
debug = 1

# Optimize crypto_suite in test builds because the in-house Ed25519
# implementation is extremely slow in debug mode (can cause test timeouts).
[profile.test.package.crypto_suite]
opt-level = 2
