[package]
name = "bridges"
version = "0.1.0"
edition = "2021"

[dependencies]
crypto_suite = { path = "../crates/crypto_suite" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"
once_cell = { version = "1", optional = true }
prometheus = { version = "0.13", optional = true }
ledger = { path = "../ledger" }
sys = { path = "../crates/sys" }

[features]
telemetry = ["once_cell", "prometheus"]

[dev-dependencies]
dex = { path = "../dex" }
