[package]
name = "bridges"
version = "0.1.0"
edition = "2021"

[dependencies]
concurrency = { path = "../crates/concurrency", optional = true }
crypto_suite = { path = "../crates/crypto_suite" }
foundation_serialization = { path = "../crates/foundation_serialization" }
ledger = { path = "../ledger" }
runtime = { path = "../crates/runtime", optional = true }
sys = { path = "../crates/sys" }
serde = { version = "1", features = ["derive"] }

[features]
telemetry = ["concurrency", "runtime"]

[dev-dependencies]
dex = { path = "../dex" }
