[package]
name = "contract-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
wallet = { path = "../crates/wallet", optional = true, features = ["dilithium"] }
hex = "0.4"
the_block = { path = "../node" }
governance = { path = "../governance" }
bridges = { path = "../bridges" }
bincode = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dkg = { path = "../dkg", optional = true }
anyhow = "1"
dex = { path = "../dex" }
ripemd = "0.1"
storage = { path = "../storage" }
runtime = { path = "../crates/runtime", default-features = false, features = ["inhouse-backend"] }
futures = "0.3"
url = "2"
light-client = { path = "../crates/light-client" }
crypto = { path = "../crypto" }
crypto_suite = { path = "../crates/crypto_suite" }
codec = { path = "../crates/codec" }
cli_core = { path = "../crates/cli_core" }
wasmtime = { version = "24", optional = true }
base64 = "0.22"
rusqlite = { version = "0.30", features = ["bundled"], optional = true }
rpassword = "7"
rand = "0.8"
once_cell = "1"
state = { path = "../state" }
dirs = "5"
httpd = { path = "../crates/httpd" }
coding = { path = "../crates/coding" }

[features]
default = []
wallet = ["dep:wallet"]
quantum = ["wallet"]
telemetry = ["the_block/telemetry"]
wasm-metadata = ["dep:wasmtime"]
sqlite-storage = ["dep:rusqlite"]
full = ["wasm-metadata", "sqlite-storage"]

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "fee_estimator"
harness = false
