[package]
name = "contract-cli"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
wallet = { path = "../crates/wallet", optional = true, features = ["dilithium"] }
hex = "0.4"
the_block = { path = "../node" }
governance = { path = "../governance" }
bridges = { path = "../bridges" }
foundation_serialization = { path = "../crates/foundation_serialization" }
serde = { version = "1", features = ["derive"] }
dkg = { path = "../dkg", optional = true }
anyhow = "1"
dex = { path = "../dex" }
storage = { path = "../storage" }
runtime = { path = "../crates/runtime", default-features = false, features = ["inhouse-backend"] }
light-client = { path = "../crates/light-client" }
crypto = { path = "../crypto" }
crypto_suite = { path = "../crates/crypto_suite" }
codec = { path = "../crates/codec" }
cli_core = { path = "../crates/cli_core" }
base64_fp = { path = "../crates/base64_fp" }
rusqlite = { version = "0.30", features = ["bundled"], optional = true }
rpassword = "7"
rand = { path = "../crates/rand" }
sys = { path = "../crates/sys" }
foundation_lazy = { path = "../crates/foundation_lazy" }
state = { path = "../state" }
httpd = { path = "../crates/httpd" }
coding = { path = "../crates/coding" }

[features]
default = []
wallet = ["dep:wallet"]
quantum = ["wallet"]
telemetry = ["the_block/telemetry"]
wasm-metadata = []
sqlite-storage = ["dep:rusqlite"]
full = ["sqlite-storage"]

[dev-dependencies]
testkit = { path = "../crates/testkit" }

[build-dependencies]
dependency_guard = { path = "../crates/dependency_guard" }

[[bench]]
name = "fee_estimator"
harness = false
