[package]
name = "contract-cli"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
wallet = { path = "../crates/wallet", optional = true, features = ["dilithium"] }
the_block = { path = "../node" }
governance = { path = "../governance" }
bridges = { path = "../bridges" }
foundation_serialization = { path = "../crates/foundation_serialization" }
foundation_unicode = { path = "../crates/foundation_unicode" }
foundation_sqlite = { path = "../crates/foundation_sqlite", optional = true }
serde = { version = "1", features = ["derive"] }
dkg = { path = "../dkg", optional = true }
anyhow = "1"
dex = { path = "../dex" }
storage = { path = "../storage" }
runtime = { path = "../crates/runtime", default-features = false, features = ["inhouse-backend"] }
light-client = { path = "../crates/light-client" }
crypto = { path = "../crypto" }
crypto_suite = { path = "../crates/crypto_suite" }
codec = { path = "../crates/codec" }
cli_core = { path = "../crates/cli_core" }
base64_fp = { path = "../crates/base64_fp" }
rpassword = "7"
rand = { path = "../crates/rand" }
sys = { path = "../crates/sys" }
foundation_lazy = { path = "../crates/foundation_lazy" }
state = { path = "../state" }
httpd = { path = "../crates/httpd" }
coding = { path = "../crates/coding" }
http_env = { path = "../crates/http_env" }
foundation_tls = { path = "../crates/foundation_tls" }

[features]
default = []
wallet = ["dep:wallet"]
quantum = ["wallet", "the_block/pq-crypto"]
pq-crypto = ["quantum"]
telemetry = ["the_block/telemetry"]
wasm-metadata = []
sqlite-storage = ["dep:foundation_sqlite"]
full = ["sqlite-storage"]

[dev-dependencies]
testkit = { path = "../crates/testkit" }

[build-dependencies]
dependency_guard = { path = "../crates/dependency_guard" }

[[bench]]
name = "fee_estimator"
harness = false
