[package]
name = "crypto"
version = "0.1.0"
edition = "2021"

[dependencies]
# Post-quantum Dilithium implementation
pqcrypto-dilithium = { path = "../crates/pqcrypto_dilithium", optional = true }
base64_fp = { path = "../crates/base64_fp" }
crypto_suite = { path = "../crates/crypto_suite" }
sys = { path = "../crates/sys" }

[features]
quantum = ["pqcrypto-dilithium"]
