[package]
name = "dex"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
foundation_serialization = { path = "../crates/foundation_serialization" }
crypto_suite = { path = "../crates/crypto_suite" }
subtle = "2"

[dev-dependencies]
testkit = { path = "../crates/testkit" }
