[package]
name = "explorer"
version = "0.1.0"
edition = "2021"

[dependencies]
rusqlite = { version = "0.30", features=["bundled"] }
serde = { version = "1.0", features = ["derive"] }
hex = "0.4"
bincode = "1.3"
codec = { path = "../crates/codec" }
httpd = { path = "../crates/httpd" }
runtime = { path = "../crates/runtime" }
anyhow = "1"
the_block = { path = "../node" }
crypto_suite = { path = "../crates/crypto_suite" }
storage = { path = "../storage" }
serde_json = "1"
lru = "0.11"
sys = { path = "../crates/sys" }

[dev-dependencies]
rand = { path = "../crates/rand" }
testkit = { path = "../crates/testkit" }
