[package]
name = "explorer"
version = "0.1.0"
edition = "2021"

[dependencies]
foundation_sqlite = { path = "../crates/foundation_sqlite" }
serde = { version = "1.0", features = ["derive"] }
foundation_serialization = { path = "../crates/foundation_serialization" }
codec = { path = "../crates/codec" }
httpd = { path = "../crates/httpd" }
http_env = { path = "../crates/http_env" }
runtime = { path = "../crates/runtime" }
anyhow = "1"
the_block = { path = "../node" }
crypto_suite = { path = "../crates/crypto_suite" }
storage = { path = "../storage" }
concurrency = { path = "../crates/concurrency" }
sys = { path = "../crates/sys" }

[dev-dependencies]
rand = { path = "../crates/rand" }
testkit = { path = "../crates/testkit" }
