[package]
name = "explorer"
version = "0.1.0"
edition = "2021"

[dependencies]
foundation_sqlite = { path = "../crates/foundation_sqlite" }
serde = { workspace = true }
foundation_serialization = { path = "../crates/foundation_serialization" }
codec = { path = "../crates/codec" }
httpd = { path = "../crates/httpd" }
http_env = { path = "../crates/http_env" }
runtime = { path = "../crates/runtime" }
diagnostics = { path = "../crates/diagnostics" }
the_block = { path = "../node" }
crypto_suite = { path = "../crates/crypto_suite" }
storage = { path = "../storage" }
concurrency = { path = "../crates/concurrency" }
sys = { path = "../crates/sys" }

[dev-dependencies]
rand = { path = "../crates/rand" }
testkit = { path = "../crates/testkit" }
ad_market = { path = "../crates/ad_market" }

[[bin]]
name = "explorer-migrate-treasury"
path = "src/bin/migrate_treasury_db.rs"
