[package]
name = "the-block-fuzz"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
libfuzzer-sys = "0.4"
arbitrary = { version = "1", features = ["derive"] }
tempfile = "3"
hex = "0.4"

the_block = { path = ".." }

[[bin]]
name = "wal_fuzz"
path = "fuzz_targets/wal_fuzz.rs"

[package.metadata]
cargo-fuzz = true
