[package]
name = "the-block-fuzz"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
foundation_fuzz = { path = "../crates/foundation_fuzz" }
sys = { path = "../crates/sys" }
foundation_serialization = { path = "../crates/foundation_serialization" }
foundation_rpc = { path = "../crates/foundation_rpc" }

the_block = { path = "../node", features = ["fuzzy"] }
crypto_suite = { path = "../crates/crypto_suite" }

[[bin]]
name = "wal_fuzz"
path = "fuzz_targets/wal_fuzz.rs"
test = false

[[bin]]
name = "compute_market"
path = "fuzz_targets/compute_market.rs"
test = false

[[bin]]
name = "network"
path = "fuzz_targets/network.rs"
test = false

[package.metadata]
cargo-fuzz = true

[[bin]]
name = "rpc"
path = "fuzz_targets/rpc.rs"
test = false

[[bin]]
name = "localnet_proximity"
path = "fuzz_targets/localnet_proximity.rs"
test = false

[[bin]]
name = "range_boost_parse"
path = "fuzz_targets/range_boost_parse.rs"
test = false

[[bin]]
name = "quic_frame"
path = "fuzz_targets/quic_frame.rs"
test = false

[[bin]]
name = "energy_receipt"
path = "fuzz_targets/energy_receipt.rs"
test = false
