[package]
name = "governance"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
path = "src/lib.rs"

[[bin]]
name = "bootstrap_dependency_policy"
path = "src/bin/bootstrap_dependency_policy.rs"

[dependencies]
foundation_math = { path = "../crates/foundation_math" }
rand = { path = "../crates/rand" }
sled = { path = "../sled" }
foundation_lazy = { path = "../crates/foundation_lazy" }
foundation_serialization = { path = "../crates/foundation_serialization" }
serde = { workspace = true }

[dev-dependencies]
sys = { path = "../crates/sys" }
