[package]
name = "ledger"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
crypto_suite = { path = "../crates/crypto_suite" }
bincode = "1.3"
storage_engine = { path = "../crates/storage_engine" }
