[package]
name = "ledger"
version = "0.1.0"
edition = "2021"

[dependencies]
foundation_serialization = { path = "../crates/foundation_serialization" }
cli_core = { path = "../crates/cli_core" }
crypto_suite = { path = "../crates/crypto_suite" }
storage_engine = { path = "../crates/storage_engine" }
serde = { version = "1", features = ["derive"], default-features = false }
