[package]
name = "metrics-aggregator"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
concurrency = { path = "../crates/concurrency" }
diagnostics = { path = "../crates/diagnostics" }
httpd = { path = "../crates/httpd" }
serde = { version = "1", features = ["derive"] }
foundation_serialization = { path = "../crates/foundation_serialization" }
runtime = { path = "../crates/runtime", default-features = false, features = ["inhouse-backend"] }
crypto_suite = { path = "../crates/crypto_suite" }
storage_engine = { path = "../crates/storage_engine" }
time = { version = "0.3", default-features = false, features = ["formatting", "macros", "std"] }
sys = { path = "../crates/sys" }

[dev-dependencies]
rand = { path = "../crates/rand" }

[build-dependencies]
dependency_guard = { path = "../crates/dependency_guard" }


[features]
s3 = []
