[package]
name = "metrics-aggregator"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
concurrency = { path = "../crates/concurrency" }
diagnostics = { path = "../crates/diagnostics" }
httpd = { path = "../crates/httpd" }
http_env = { path = "../crates/http_env" }
serde = { version = "1", features = ["derive"] }
foundation_serialization = { path = "../crates/foundation_serialization" }
foundation_telemetry = { path = "../crates/foundation_telemetry" }
runtime = { path = "../crates/runtime", default-features = false, features = ["inhouse-backend"] }
crypto_suite = { path = "../crates/crypto_suite" }
storage_engine = { path = "../crates/storage_engine" }
foundation_time = { path = "../crates/foundation_time" }
sys = { path = "../crates/sys" }

[dev-dependencies]
rand = { path = "../crates/rand" }

[build-dependencies]
dependency_guard = { path = "../crates/dependency_guard" }


[features]
s3 = []
