[package]
name = "metrics-aggregator"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
concurrency = { path = "../crates/concurrency" }
diagnostics = { path = "../crates/diagnostics" }
foundation_metrics = { path = "../crates/foundation_metrics" }
httpd = { path = "../crates/httpd" }
http_env = { path = "../crates/http_env" }
foundation_serialization = { path = "../crates/foundation_serialization" }
foundation_telemetry = { path = "../crates/foundation_telemetry" }
monitoring-build = { path = "../monitoring" }
runtime = { path = "../crates/runtime", default-features = false, features = ["inhouse-backend"] }
crypto_suite = { path = "../crates/crypto_suite" }
storage_engine = { path = "../crates/storage_engine" }
foundation_time = { path = "../crates/foundation_time" }
sys = { path = "../crates/sys" }
tls_warning = { path = "../crates/tls_warning" }
governance = { path = "../governance" }
serde = { workspace = true }
foundation_object_store = { path = "../crates/foundation_object_store", optional = true }

[dev-dependencies]
rand = { path = "../crates/rand" }
the_block = { path = "../node" }
# tb-sim = { path = "../sim" }  # Excluded: dependency_fault feature configuration issues

[build-dependencies]
dependency_guard = { path = "../crates/dependency_guard" }


[features]
s3 = ["dep:foundation_object_store"]
