[package]
name = "monitoring-build"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
foundation_serialization = { path = "../crates/foundation_serialization" }
http_env = { path = "../crates/http_env" }
httpd = { path = "../crates/httpd" }

[workspace]

[build-dependencies]
foundation_serialization = { path = "../crates/foundation_serialization" }
