[package]
name = "monitoring-build"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
foundation_serialization = { path = "../crates/foundation_serialization" }
foundation_metrics = { path = "../crates/foundation_metrics" }
http_env = { path = "../crates/http_env" }
httpd = { path = "../crates/httpd" }
crypto_suite = { path = "../crates/crypto_suite" }

[build-dependencies]
foundation_serialization = { path = "../crates/foundation_serialization" }
