[package]
name = "the_block"
version = "0.1.0"
edition = "2021"
build = "build.rs"
 
[dependencies]
crypto = { path = "../crypto" }
crypto_suite = { path = "../crates/crypto_suite" }
python_bridge = { path = "../crates/python_bridge", optional = true }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
inflation = { path = "../inflation" }
hex = "0.4"
rand = { path = "../crates/rand" }
dkg = { path = "../dkg" }
histogram_fp = { path = "../crates/histogram_fp" }
subtle = "2"
time = "0.3"
# Error handling and system utilities
anyhow = "1"
diagnostics = { path = "../crates/diagnostics" }
# Wallet framework
wallet = { path = "../crates/wallet" }
# Async runtime facade
runtime = { path = "../crates/runtime", default-features = false, features = ["inhouse-backend"] }
httpd = { path = "../crates/httpd" }
# Region policy packs
jurisdiction = { path = "../crates/jurisdiction" }
p2p_overlay = { path = "../crates/p2p_overlay" }
# Post-quantum signature support
pqcrypto-dilithium = { version = "0.5", optional = true }
privacy = { path = "../privacy", optional = true }
cli_core = { path = "../crates/cli_core" }
thiserror = "1"
dashmap = "5"
log = { version = "0.4", features = ["kv_unstable"] }
serde_json = "1"
serde_cbor = "0.11"
serde_bytes = "0.11"
prometheus = { version = "0.13", optional = true }
once_cell = "1"
static_assertions = "1"
toml = "0.8"
tar = "0.4"
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter", "json"] }
jsonrpc-core = "18"
flate2 = "1"
indexmap = "2"
colored = "2"
base64_fp = { path = "../crates/base64_fp" }
sled = { path = "../sled" }
rusqlite = { version = "0.30", features = ["bundled"], optional = true }
futures = "0.3"
x509-parser = "0.16"
state = { path = "../state" }
# probabilistic rate-limit filter
xorfilter-rs = "0.5"
# fountain coding for repair overlay (via coding crate)
# linear-algebra routines for governor
nalgebra = { version = "0.32", features = ["std"] }
# statistical functions for risk tuning
statrs = "0.16"
# spectral transforms for burst veto
rustdct = "0.7"
# minimal HTTP parsing
httparse = "1"
# account ledger for CT burns
ledger = { path = "../ledger" }
dex = { path = "../dex" }
bridges = { path = "../bridges" }
# serialization helpers
codec = { path = "../crates/codec" }
# storage market primitives
storage = { path = "../storage" }
# hardware detection
# light-client integration
light-client = { path = "../crates/light-client" }
storage_engine = { path = "../crates/storage_engine", default-features = false }
coding = { path = "../crates/coding" }
# governance parameter helpers
governance-spec = { path = "../governance", package = "governance" }
# jittered RPC client
# parallel execution runtime
rayon = "1"
# webhook alerts
ureq = { version = "2", features = ["json"], optional = true }
pprof = { version = "0.13", features = ["flamegraph"] }
bytes = "1"
lru = "0.11"
parking_lot = "0.12"
tracing-chrome = "0.6"
transport = { path = "../crates/transport", optional = true, default-features = false, features = ["quinn", "s2n-quic"] }
regex = "1"
terminal_size = "0.2"
sys = { path = "../crates/sys" }

[features]
default = ["inhouse-storage"]
storage-rocksdb = []
inhouse-storage = []
sqlite-migration = ["dep:rusqlite"]
cli = []
lightweight-integration = []
integration-tests = []
quantum = ["pqcrypto-dilithium", "crypto/quantum"]

fuzzy = []
telemetry = ["prometheus", "tracing", "ureq", "bridges/telemetry"]
telemetry-json = ["telemetry"]
test-telemetry = ["telemetry"]
telemetry-verbose = ["telemetry"]
pq-crypto = ["pqcrypto-dilithium"]
bluetooth = []
gpu = []
gateway = []
quic = ["transport"]
privacy = ["dep:privacy"]
reentrant_scheduler = []
s2n-quic = ["quic", "transport/s2n-quic"]
python-bindings = ["dep:python_bridge"]

[dev-dependencies]
jurisdiction = { path = "../crates/jurisdiction" }
sim = { package = "tb-sim", path = "../sim" }
testkit = { path = "../crates/testkit" }

[build-dependencies]
dependency_guard = { path = "../crates/dependency_guard" }
crypto_suite = { path = "../crates/crypto_suite" }

[[bench]]
name = "startup_rebuild"
harness = false

[[bench]]
name = "parallel_runtime"
harness = false

[[bench]]
name = "telemetry_memory"
harness = false

[[bench]]
name = "order_book"
harness = false

[[bench]]
name = "dilithium"
harness = false

[[bench]]
name = "ed25519_verify"
harness = false

[[test]]
name = "nonce_supply_prop"
path = "tests/nonce_supply_prop.rs"

[lib]
name = "the_block"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "aggregator"
path = "src/bin/aggregator.rs"
required-features = ["cli"]
test = false

[[bin]]
name = "ban"
path = "src/bin/ban.rs"
required-features = ["cli"]
test = false

[[bin]]
name = "db_compact"
path = "src/bin/db_compact.rs"
required-features = ["cli"]
test = false

[[bin]]
name = "db_migrate"
path = "src/bin/db_migrate.rs"
required-features = ["cli"]
test = false

[[bin]]
name = "gov"
path = "src/bin/gov.rs"
required-features = ["cli"]
test = false

[[bin]]
name = "net"
path = "src/bin/net.rs"
required-features = ["cli"]
test = false

[[bin]]
name = "node"
path = "src/bin/node.rs"
required-features = ["cli"]
test = false

[[bin]]
name = "snapshot"
path = "src/bin/snapshot.rs"
required-features = ["cli"]
test = false

[[bin]]
name = "wallet"
path = "src/bin/wallet.rs"
required-features = ["cli"]
test = false

[[bin]]
name = "migrate_overlay_store"
path = "../scripts/migrate_overlay_store.rs"
test = false

